# domain-alpha

./: .gitignore  AGENTS.md  AGENT_LOG.md  PRD.md  README.md  domain-investment-screener-idea.md  pyproject.toml
data/samples/: domain-candidates.sample.csv
docs/: WORKFLOW.md
src/domain_screener/: __init__.py
