[project]
name = "domain-alpha"
version = "0.1.0"
description = "A planned domain investment screener for ranking domain candidates."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
